<?xml version="1.0"?>
<package>
  <name>hekateros_meta</name>
  <version>0.0.1</version>
  <description>The Hekateros Robotic Manipulator ROS metapackage.</description>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros_meta</url>

  <author email="rknight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hekateros_desc</build_depend>

  <export>
    <metapackage/>
  </export>

</package>
