<?xml version="1.0"?>
<package>
  <name>hekateros</name>
  <version>0.0.1</version>
  <description>The Hekateros Robotic Manipulator ROS metapackage.</description>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros_meta</url>

  <author email="rknight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depends>hekateros_desc</run_depends>
  <run_depends>dynamixel</run_depends>

  <export>
    <metapackage/>
  </export>

</package>
