<?xml version="1.0"?>
<package>
  <name>dynamixel_control</name>
  <version>0.0.1</version>
  <description>The dynamixel_control package - provides an advanced ROS interface to the Dynamixel line of servo motors.</description>
  
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros_meta</url>

  <author email="rknight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hekateros_control</run_depend>
  <run_depend>hekateros_desc</run_depend>
  <run_depend>hekateros_launch</run_depend>
  <run_depend>hekateros_desc</run_depend>
  <run_depend>hekateros_sim</run_depend>
  <run_depend>hekateros_tutorials</run_depend>
  <run_depend>dynamixel_controllers</run_depend>

</package>
