<?xml version="1.0"?>
<package>
  <name>dynamixel_control</name>
  <version>0.0.1</version>
  <description>The dynamixel_control package - provides an advanced ROS interface to the Dynamixel line of servo motors.</description>
  
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros_meta</url>

  <author email="robin.knight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
