<?xml version="1.0"?>
<package>
  <name>hekateros</name>
  <version>0.0.1</version>
  <description>The Hekateros Robotic Manipulator ROS metapackage - provides complete hekateros software bundle.</description>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros_meta</url>

  <author email="rknight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hekateros_desc</run_depend>
  <run_depend>hekateros_test</run_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
