<?xml version="1.0"?>
<package>
  <name>hekateros</name>
  <version>0.0.1</version>

  <description>
    The Hekateros Robotic Manipulator ROS metapackage - provides complete 
    hekateros software bundle.
  </description>

  <author email="robin.knight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>
  <license>BSD</license>

  <url type="website">http://roadnarrows.com/Hekateros</url>
  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hekateros_moveit_5l</run_depend>
  <run_depend>hekateros_apps</run_depend>
  <run_depend>hekateros_control</run_depend>
  <run_depend>hekateros_desc</run_depend>
  <run_depend>hekateros_launch</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
