<?xml version="1.0"?>
<package>
  <name>hekateros</name>
  <version>2.1.0</version>

  <description>
    The RoadNarrows Hekateros Robotic Manipulator ROS metapackage.
    This metapackage provides core Hekateros ROS software packages.
  </description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <author email="daniel@roadnarrows.com">Daniel Packard</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://roadnarrows.com</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hekateros_apps</run_depend>
  <run_depend>hekateros_control</run_depend>
  <run_depend>hekateros_desc</run_depend>
  <run_depend>hekateros_launch</run_depend>
  <run_depend>hekateros_moveit</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
