<?xml version="1.0"?>
<package>
  <name>hekateros_control</name>
  <version>0.0.1</version>
  <description>The hekateros_control package - provides arm control interface.</description>

  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>
  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros</url>

  <author email="daniel@roadnarrows.com">daniel packard</author>
  <author email="robin.knight@roadnarrows.com">robin knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
