<?xml version="1.0"?>
<package>
  <name>hekateros_launch</name>
  <version>0.0.1</version>
  <description>The hekateros_launch package - provides hekateros-specific launch files.</description>

  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>
  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Hekateros</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros</url>

  <author email="robin.knight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
