<?xml version="1.0"?>
<package>
  <name>hekateros_launch</name>
  <version>0.0.1</version>
  <description>Provides Hekateros ROS launch files.</description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>

  <license>MIT</license>

  <url type="website">http://roadnarrows.com</url>
  <url type="website">http://github.com/roadnarrows-robotics/hekateros</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
