<?xml version="1.0"?>
<package>
  <name>hekateros_rosbridge</name>
  <version>0.0.0</version>
  <description>The hekateros_rosbridge package</description>

  <maintainer email="daniel@roadnarrows.com">daniel</maintainer>
  <author email="daniel@roadnarrows.com">daniel</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
